--- a/SpringBoot/src/main/resources/application.properties
+++ b/SpringBoot/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 
 #logging.level.root=INFO
 #logging.level.com.rag=TRACE
+logging.file: /application.log
 
 spring.mvc.view.prefix=/pages/
 spring.mvc.view.suffix=.jsp
