--- a/SpringBoot/pom.xml
+++ b/SpringBoot/pom.xml
@@ -90,7 +90,16 @@
 <dependency>
     <groupId>org.springframework.kafka</groupId> 
     <artifactId>spring-kafka</artifactId> 
-</dependency>		
+</dependency>	
+
+<!-- <dependency>
+    <groupId>org.springframework.boot</groupId> 
+    <artifactId>spring-boot-starter-thymeleaf</artifactId> 
+</dependency>	
+<dependency>
+    <groupId>org.thymeleaf.extras</groupId> 
+    <artifactId>thymeleaf-extras-springSecurity5</artifactId> 
+</dependency> -->
 <!-- 		<dependency>
 		    <groupId>org.junit.jupiter</groupId>
 		    <artifactId>junit-jupiter-api</artifactId>
